// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField.ts should render component and match snapshot 1`] = `
<div class="text-field"><label id="label-1" for="text-field-1" aria-hidden="false" class="label">
    <div class="label__wrapper">
      <div class="label__content__wrapper">
        <div class="label__content">Default</div>
      </div>
      <!---->
    </div>
  </label>
  <!---->
  <div class="text-field__control">
    <!----><input id="text-field-1" class="text-field__input" placeholder="Default" type="text" inputmode="text" autocomplete="off">
    <!---->
    <!---->
    <!---->
  </div>
</div>
`;

exports[`TextField.ts should render component with custom classes and match snapshot 1`] = `
<div class="text-field">
  <!---->
  <!---->
  <div class="text-field__control text-field__control--solo text-field__control--dense dark:bg-transparent">
    <!----><input id="text-field-1" class="text-field__input dark:placeholder-blue-500" placeholder="Solo custom" type="text" inputmode="text" autocomplete="off">
    <!---->
    <!---->
    <!---->
  </div>
</div>
`;

exports[`TextField.ts should render component with dense prop and match snapshot 1`] = `
<div class="text-field"><label id="label-1" for="text-field-1" aria-hidden="false" class="label">
    <div class="label__wrapper">
      <div class="label__content__wrapper">
        <div class="label__content">Default</div>
      </div>
      <!---->
    </div>
  </label>
  <!---->
  <div class="text-field__control text-field__control--dense">
    <!----><input id="text-field-1" class="text-field__input" placeholder="Default" type="text" inputmode="text" autocomplete="off">
    <!---->
    <!---->
    <!---->
  </div>
</div>
`;

exports[`TextField.ts should render component with disabled prop and match snapshot 1`] = `
<div class="text-field text-field--disabled"><label id="label-1" for="text-field-1" aria-hidden="false" class="label">
    <div class="label__wrapper">
      <div class="label__content__wrapper">
        <div class="label__content">Default</div>
      </div>
      <!---->
    </div>
  </label>
  <!---->
  <div class="text-field__control">
    <!----><input id="text-field-1" class="text-field__input" placeholder="Default" type="text" inputmode="text" disabled="" autocomplete="off">
    <!---->
    <!---->
    <!---->
  </div>
</div>
`;

exports[`TextField.ts should render component with loading prop and match snapshot 1`] = `
<div class="text-field"><label id="label-1" for="text-field-1" aria-hidden="false" class="label">
    <div class="label__wrapper">
      <div class="label__content__wrapper">
        <div class="label__content">Default</div>
      </div>
      <!---->
    </div>
  </label>
  <!---->
  <div class="text-field__control">
    <!----><input id="text-field-1" class="text-field__input" placeholder="Default" type="text" inputmode="text" autocomplete="off">
    <!---->
    <!---->
    <!---->
  </div>
</div>
`;

exports[`TextField.ts should render component with name, required, readonly props and match snapshot 1`] = `
<div class="text-field text-field--readonly"><label id="label-1" for="text-field-1" aria-hidden="false" class="label">
    <div class="label__wrapper">
      <div class="label__content__wrapper">
        <div class="label__content">Default</div>
      </div>
      <!---->
    </div>
  </label>
  <!---->
  <div class="text-field__control">
    <!----><input id="text-field-1" class="text-field__input" name="text-field-name" required="" placeholder="Default" type="text" inputmode="text" readonly="" autocomplete="off">
    <!---->
    <!---->
    <!---->
  </div>
</div>
`;

exports[`TextField.ts should render component with singleLine prop and match snapshot 1`] = `
<div class="text-field">
  <!---->
  <!---->
  <div class="text-field__control">
    <!----><input id="text-field-1" class="text-field__input" placeholder="Default" type="text" inputmode="text" autocomplete="off">
    <!---->
    <!---->
    <!---->
  </div>
</div>
`;

exports[`TextField.ts should render component with slots and match snapshot 1`] = `
<div class="text-field">
  <!---->
  <!---->
  <div class="text-field__control text-field__control--has-prepend text-field__control--has-append">
    <div class="flex items-center flex-shrink-0"><i class="icon text-gray-200 dark:text-gray-300" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24px" width="24px" role="img" aria-hidden="true" style="font-size: 24px; height: 24px; width: 24px;">
          <g fill="currentColor">
            <path d="prepend-icon"></path>
          </g>
        </svg></i>Prepend slot</div><input id="text-field-1" class="text-field__input" type="text" inputmode="text" autocomplete="off">
    <div class="flex items-center flex-shrink-0">Append slot<i class="icon text-gray-200 dark:text-gray-300" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24px" width="24px" role="img" aria-hidden="true" style="font-size: 24px; height: 24px; width: 24px;">
          <g fill="currentColor">
            <path d="append-icon"></path>
          </g>
        </svg></i></div>
    <!---->
    <!---->
  </div>
</div>
`;

exports[`TextField.ts should render component with solo prop and match snapshot 1`] = `
<div class="text-field">
  <!---->
  <!---->
  <div class="text-field__control text-field__control--solo text-field__control--dense">
    <!----><input id="text-field-1" class="text-field__input" placeholder="Default" type="text" inputmode="text" autocomplete="off">
    <!---->
    <!---->
    <!---->
  </div>
</div>
`;

exports[`TextField.ts should render focused component and match snapshot 1`] = `
<div class="text-field text-field--focused"><label id="label-1" for="text-field-1" aria-hidden="false" class="label">
    <div class="label__wrapper">
      <div class="label__content__wrapper">
        <div class="label__content">Default</div>
      </div>
      <!---->
    </div>
  </label>
  <!---->
  <div class="text-field__control">
    <!----><input id="text-field-1" class="text-field__input" placeholder="Default" type="text" inputmode="text" autocomplete="off">
    <!---->
    <!---->
    <!---->
  </div>
</div>
`;
